5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1679_1105.log
== TEST (2019-04-24 23:50:05) 
-- CODE:
brasao = int(input("Descricao do Brasao "))

if (brasao == lobo):
	casa = "Stark"
elif (brasao == leao):
	casa = "Lannister"
elif (brasao == veado):
	casa = "Baratheon"
elif (brasao == dragao):
	casa = "Targaryen"
elif (brasao == rosa):
	casa = "Tyrell"
elif (brasao == sol):
	casa = "Martell"
elif (brasao == lula):
	casa = "Greyjoy"
elif (brasao == esfolado):
	casa = "Bolton"
elif (brasao == turta):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao = int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:50:26) 
-- CODE:
brasao = input("Descricao do Brasao ")

if (brasao == lobo):
	casa = "Stark"
elif (brasao == leao):
	casa = "Lannister"
elif (brasao == veado):
	casa = "Baratheon"
elif (brasao == dragao):
	casa = "Targaryen"
elif (brasao == rosa):
	casa = "Tyrell"
elif (brasao == sol):
	casa = "Martell"
elif (brasao == lula):
	casa = "Greyjoy"
elif (brasao == esfolado):
	casa = "Bolton"
elif (brasao == turta):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:51:12) 
-- CODE:
brasao = input("Descricao do Brasao ")

if (brasao == lobo):
	casa = "Stark"
elif (brasao == leao):
	casa = "Lannister"
elif (brasao == veado):
	casa = "Baratheon"
elif (brasao == dragao):
	casa = "Targaryen"
elif (brasao == rosa):
	casa = "Tyrell"
elif (brasao == sol):
	casa = "Martell"
elif (brasao == lula):
	casa = "Greyjoy"
elif (brasao == esfolado):
	casa = "Bolton"
elif (brasao == turta):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:52:18) 
-- CODE:
brasao = input("Descricao do Brasao ")

if brasao == lobo:
	casa = "Stark"
elif (brasao == leao):
	casa = "Lannister"
elif (brasao == veado):
	casa = "Baratheon"
elif (brasao == dragao):
	casa = "Targaryen"
elif (brasao == rosa):
	casa = "Tyrell"
elif (brasao == sol):
	casa = "Martell"
elif (brasao == lula):
	casa = "Greyjoy"
elif (brasao == esfolado):
	casa = "Bolton"
elif (brasao == turta):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if brasao == lobo:
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:53:03) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == leao):
	casa = "Lannister"
elif (brasao == veado):
	casa = "Baratheon"
elif (brasao == dragao):
	casa = "Targaryen"
elif (brasao == rosa):
	casa = "Tyrell"
elif (brasao == sol):
	casa = "Martell"
elif (brasao == lula):
	casa = "Greyjoy"
elif (brasao == esfolado):
	casa = "Bolton"
elif (brasao == turta):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    elif (brasao == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:53:47) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.1372
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:53:53) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:54:12) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.187987
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:17:29) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.173951
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:17:44) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:17:59) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.158953
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:20:50) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:21:01) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"


print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.191323
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:21:56) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.179092
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:21:59) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:27:48) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)

if (brasao =! "lobo" or brasao =! "leao" or brasao =! "veado" or brasao =! "dragao0" or brasao =! "rosa" or brasao =! "sol" or brasao =! "lula" or brasao! "esfolado" or brasao =! "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- ERROR:
File "XXXX", line 26
    if (brasao =! "lobo" or brasao =! "leao" or brasao =! "veado" or brasao =! "dragao0" or brasao =! "rosa" or brasao =! "sol" or brasao =! "lula" or brasao! "esfolado" or brasao =! "turta"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:30:15) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)

if (brasao =! "lobo" or brasao =! "leao" or brasao =! "veado" or brasao =! "dragao" or brasao =! "rosa" or brasao =! "sol" or brasao =! "lula" or brasao! =! "esfolado" or brasao =! "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- ERROR:
File "XXXX", line 26
    if (brasao =! "lobo" or brasao =! "leao" or brasao =! "veado" or brasao =! "dragao" or brasao =! "rosa" or brasao =! "sol" or brasao =! "lula" or brasao! =! "esfolado" or brasao =! "turta"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:49) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao! == "esfolado" or brasao == "turta"):
	print ("Casa: ", casa)
-- ERROR:
File "XXXX", line 25
    if (brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao! == "esfolado" or brasao == "turta"):
                                                                                                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:35:11) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta"):
print ("Casa: ", casa)
-- ERROR:
File "XXXX", line 26
    print ("Casa: ", casa)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:35:44) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta"):
	print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:35:54) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta"):
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.16043
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:15:24) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.123576
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:18:42) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
#else:
#	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.157259
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:19:49) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
#else:
#	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:20:11) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:20:23) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:23:48) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
#else:
#	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
or brasao != "leao" 
or brasao != "veado" 
or brasao != "dragao" 
or brasao != "rosa" 
or brasao != "sol" 
or brasao != "lula" 
or brasao != "esfolado" 
or brasao != "turta"):
	print ("Brasao invalido")
else
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.14465
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 35
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:23:50) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
#else:
#	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
or brasao != "leao" 
or brasao != "veado" 
or brasao != "dragao" 
or brasao != "rosa" 
or brasao != "sol" 
or brasao != "lula" 
or brasao != "esfolado" 
or brasao != "turta"):
	print ("Brasao invalido")
else
	print ("Casa: ", casa)
-- ERROR:
File "XXXX", line 35
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:26:37) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:26:44) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:27:13) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
#print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:27:47) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:28:08) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:28:36) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:28:45) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.18014
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa:  Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:30:11) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:32:13) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.122827
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:32:15) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:32:31) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.191029
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:35:53) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:36:57) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

#print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.178969
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:37:23) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")


if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Entrada: ", brasao)
	#print ("Casa: ", casa)
-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:38:07) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- OUTPUT:
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:38:38) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
#else:
#	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.216153
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:41:42) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
elif (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)

else:
	print ("Casa: ", casa)
-- ERROR:
File "XXXX", line 36
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:41:51) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
elif (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
print ("Casa: ", casa)
-- EXECUTION TIME:
0.157782
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:42:41) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
else:
	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.201247
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:43:00) 
-- CODE:
brasao = input("Descricao do Brasao: ")

if (brasao == "lobo"):
	casa = "Stark"
elif (brasao == "leao"):
	casa = "Lannister"
elif (brasao == "veado"):
	casa = "Baratheon"
elif (brasao == "dragao"):
	casa = "Targaryen"
elif (brasao == "rosa"):
	casa = "Tyrell"
elif (brasao == "sol"):
	casa = "Martell"
elif (brasao == "lula"):
	casa = "Greyjoy"
elif (brasao == "esfolado"):
	casa = "Bolton"
elif (brasao == "turta"):
	casa = "Tully"
#else:
#	print ("Brasao invalido")

print ("Entrada: ", brasao)
if (brasao != "lobo" 
and brasao != "leao" 
and brasao != "veado" 
and brasao != "dragao" 
and brasao != "rosa" 
and brasao != "sol" 
and brasao != "lula" 
and brasao != "esfolado" 
and brasao != "turta"):
	print ("Brasao invalido")
else:
	print ("Casa: ", casa)
-- EXECUTION TIME:
0.15799
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
